objects/SalesOrderLine__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Lines (Account)</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccrualCOGSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual_COGS_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccrualCOGS_EUR__c</fullName>
        <label>Accrual_COGS_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualCOGS_LOCAL__c</fullName>
        <label>Accrual_COGS_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualOtherIncome_EUR__c</fullName>
        <label>Accrual_OtherIncome_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualOtherIncome_LOCAL__c</fullName>
        <label>Accrual_OtherIncome_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualRevenueFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual_Revenue_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccrualRevenue_EUR__c</fullName>
        <label>Accrual_Revenue_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualRevenue_LOCAL__c</fullName>
        <label>Accrual_Revenue_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualThirdPartyCost_EUR__c</fullName>
        <label>Accrual_ThirdPartyCost_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccrualThirdPartyCost_LOCAL__c</fullName>
        <label>Accrual_ThirdPartyCost_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_EUR__c</fullName>
        <label>Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_LOCAL__c</fullName>
        <label>Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COGSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COGS_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CYFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CY_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosedOrderLineFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClosedOrderLine_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostAmount_EUR__c</fullName>
        <label>Cost_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostAmount_LOCAL__c</fullName>
        <label>Cost_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <formula>TEXT(SalesOrder__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPO__c</fullName>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocType__c</fullName>
        <label>Doc Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightAccrualOtherIncome_EUR__c</fullName>
        <label>FreightAccrual_OtherIncome_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightAccrualOtherIncome_LOCAL__c</fullName>
        <label>FreightAccrual_OtherIncome_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightAccrualThirdPartyCost_EUR__c</fullName>
        <label>FreightAccrual_ThirdPartyCost_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightAccrualThirdPartyCost_LOCAL__c</fullName>
        <label>FreightAccrual_ThirdPartyCost_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FullSegmentsNumber__c</fullName>
        <formula>Product__r.FullSegmentsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Segments Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Class__c</fullName>
        <label>GL Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LY_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LYMTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LY_MTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LYY2DFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LY_Y2D_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LYYTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LY_YTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastStatus__c</fullName>
        <label>Last Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineDesc1__c</fullName>
        <label>Line Desc 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineDesc2__c</fullName>
        <label>Line Desc 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LotNumber__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTDRequestedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MTD_Requested_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarginAmount_EUR__c</fullName>
        <label>Margin_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginAmount_LOCAL__c</fullName>
        <label>Margin_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextStatus__c</fullName>
        <label>Next Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenAmount_EUR__c</fullName>
        <label>Open_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenAmount_LOCAL__c</fullName>
        <label>Open_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenCostAmount_EUR__c</fullName>
        <label>Open_Cost_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenCostAmount_LOCAL__c</fullName>
        <label>Open_Cost_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenMarginAmount_EUR__c</fullName>
        <label>Open_Margin_Amount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenMarginAmount_LOCAL__c</fullName>
        <label>Open_Margin_Amount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderForeignAmount__c</fullName>
        <label>Open Order Foreign Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderLineFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpenOrderLine_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenOrderQuantitySecondary__c</fullName>
        <label>Open Order Quantity Secondary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderQuantityWT__c</fullName>
        <label>Open Order Quantity (WT)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderQuantity__c</fullName>
        <label>Open Order Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderForeignAmount__c</fullName>
        <label>Order Foreign Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderLineAddressKey__c</fullName>
        <externalId>true</externalId>
        <label>OrderLineAddressKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderQuantitySecondary__c</fullName>
        <label>Order Quantity Secondary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderQuantityWT__c</fullName>
        <label>Order Quantity (WT)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderQuantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLineNumber__c</fullName>
        <label>Original Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOrderCompany__c</fullName>
        <label>Original Order Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOrderNumber__c</fullName>
        <label>Original Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOrderType__c</fullName>
        <label>Original Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherIncomeFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OtherIncome_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromisedDelDate__c</fullName>
        <label>Promised Del. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QtyBackordered__c</fullName>
        <label>Qty Backordered</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyOrdered__c</fullName>
        <label>Qty Ordered</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityCancelled__c</fullName>
        <label>Quantity Cancelled</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityLineFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuantityLine_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuantityShipToDate__c</fullName>
        <label>Quantity Ship To Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReqShipDate__c</fullName>
        <label>Req. Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RevenueFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <label>Sales Order</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesUnitCostPrice__c</fullName>
        <label>Sales Unit Cost Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ThirdPartyCostFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ThirdPartyCost_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM__c</fullName>
        <label>U/M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WeekAndDay__c</fullName>
        <label>WeekAndDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y2BFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Y2B_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Y2DFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Y2D_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTD365Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>YTD_365_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTD730Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>YTD_730_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTDFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>YTD_Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>SOL{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>